Resolve #17, remove text-align: justify;

--- a/app/assets/stylesheets/pages/courses.scss
+++ b/app/assets/stylesheets/pages/courses.scss
@@ -34,7 +34,6 @@
   }
   .search-buttons {
     margin: 30px 0;
-    text-align: justify;
   }
   @include breakpoint(laptop) {
     width: 37%;
